02-create-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod1
  labels:
    name: my-pod1
    description: this-is-label-example
    label-is-not-strict: you-can-change-label-name
  annotations:
    annotation-key1: annotation-value
    annotation-key2: very long annotation value, bla bla bla bla bla bla
spec:
  containers:
  - name: hello-world
    image: amira/nodejs-job
    ports:
      - containerPort: 8080
