11-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-probe
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3

# kubectl apply -f 11-probe.yaml

# detail probe
# kubectl describe pod nginx-with-prove

# check inside
# kubectl port-forward nginx-probe 8080:80

#
