2-create-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod1
  labels:
    name: my-pod1
    description: this-is-label-example
    label-is-not-strict: you-can-change-label-name
spec:
  containers:
  - name: hello-world
    image: adamstudiodocker/udemy-praktis-belajar-docker-dan-kubernetes-untuk-pemula:hello-world
    ports:
      - containerPort: 8080
