07-scaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment5
spec:
  replicas: 3
  selector:
    matchLabels:
      name: my-app5
  template:
    metadata:
      labels:
        name: my-app5
    spec:
      containers:
        - name: hello-world
          image: postgres:10
          resources:
            limits:
              cpu: 250m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
    name: my-service5
spec:
    type: NodePort
    selector:
      name: my-app5
    ports:
    - port: 8080
      targetPort: 8080
