17-service-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort # defined here
  selector:
    name: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001 # port used for node

# get all nodeport at minikube
# minikube service --all
# minikube service nginx-service

# kubectl apply -f 17-service-nodeport.yaml

# |-----------|---------------|--------------|---------------------------|
# | NAMESPACE |     NAME      | TARGET PORT  |            URL            |
# |-----------|---------------|--------------|---------------------------|
# | default   | kubernetes    | No node port |
# | default   | nginx-service |           80 | http://192.168.49.2:30001 | # port node
# |-----------|---------------|--------------|---------------------------|
