3-create-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  type: NodePort
  selector:
    app: my-pod1
  ports:
    - port: 8080
      targetPort: 8080

# Command apply service:
# kubectl apply -f 3-create-service.yaml

# expose deployment, an service will be created
# kubectl expose deployment my-app-deployment1 --type=LoadBalancer --port=8080

# get service url
# minikube service my-app-deployment1 --url

# OPEN DASHBOARD
# minikube dashboard
