4-pod-with-volume-service-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment2
spec:
  selector:
    matchLabels:
      app: myapp2
  template:
    metadata:
      labels:
        app: myapp2
    spec:
      containers:
      - name: container-mariadb
        image: mariadb:latest # registry name
        args: # "command" in docker-compose
          - --init file
          - /shared-files/4-schema.sql
        volumeMounts:
          - name: db-data
            mountPath: /var/lib/mysql # inside container
          - name: root
            mountPath: /shared-files
      volumes: # sources / sumber
        - name: db-data
          hostPath:
            path: /data/volume-example # host path location
        - name: root
          hostPath:
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: ClusterIP
  selector:
    name: my-app2
  ports:
    - port: 3306
      targetPort: 3306
---
