6-ingress-controller.yaml
# Install ingress addon:
# minikube addons enable ingress

# cek pod ingress
# kubectl get pods -n kube-system

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment4
spec:
  selector:
    matchLabels:
      name: my-app4
  template:
    metadata:
      labels:
        name: my-app4
    spec:
      containers:
        - name: hello-world
          image: adamstudiodocker/udemy-praktis-belajar-docker-dan-kubernetes-untuk-pemula:hello-world
---
apiVersion: v1
kind: Service
metadata:
  name: my-service4
spec:
  type: NodePort
  selector:
    app: my-app4
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: my-website.com
      http:
        paths:
        - pathType: Prefix
          path: /v1(/|$)(.*)
          backend:
            service:
              name: my-service4
              port: 
                number: 8081
        - pathType: Prefix
          path: /v2(/|$)(.*)
          backend:
            service:
              name: my-service3
              port: 
                number: 8080

# Get ingress list
# kubectl get ingress
